--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -35,9 +35,7 @@
     </nav>
   </header>
   <main>
-    
-  </main>
-  <div class="container">
+     <div class="container">
     <div class="row">
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
@@ -156,6 +154,9 @@
             </div>
           </div>
       </div>
+    </div>
+  </main>
+ 
   <footer class="page-footer blue darken-1">
     <div class="footer-copyright">
       <div class="container">
