--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="blue darken-1">
+    <nav class="grey darken-3">
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo center">Voto Unimet</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -21,21 +21,17 @@
           <li><a href="resultados.html">Resultados</a></li>
           <li><a href="denuncias.html">Denuncias</a></li>
         </ul>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#" id="login">Login</a></li>
-        </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="index.html">Home</a></li>
           <li><a href="votaciones.html">Votaciones</a></li>
           <li><a href="resultados.html">Resultados</a></li>
           <li><a href="denuncias.html">Denuncias</a></li>
-          <li><a href="#" id="login">Login</a></li>
         </ul>
       </div>
     </nav>
   </header>
   <main>
-    <section id="banner-bienvenida" class="grey lighten-3">
+    <section id="banner-bienvenida" class="grey lighten-5">
       <div class="banner">
         <div class="container">
           <div class="row">
@@ -45,13 +41,50 @@
           </div>
           <div class="row">
             <div class="col s12">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+              Voto Unimet es un sistema de Votación que realiza en tiempo en real todos los procesos que involucran un proceso electoral en la universidad. Puedes registrarte con tu correo universitario y formar parte de este proyecto tan genial.
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section id="section2">
+    <section id="form">
+      <div class="container">
+        <div class="row">
+          <h2 class="center">Registrate<hr class="naranja"> </h2>
+        </div>
+        <div class="row">
+          <div class="col m3"></div>
+          <form class="col m6 s12 card-panel">
+            <div class="row">
+              <div class="col m1"></div>
+              <div class="col m10">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="email" type="email" class="validate">
+                    <label for="email">Email</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="password" type="password" class="validate">
+                    <label for="password">Password</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 center">
+                    <a class="waves-effect waves-light btn grey darken-4" id="login" href="finish-login.html">Login</a>
+                    <a class="waves-effect waves-light btn grey-text text-darken-4 grey lighten-2" id="signup">Sign Up</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col m1"></div>
+            </div>
+          </form>
+          <div class="col m3"></div>
+        </div>
+      </div>
+    </section>
+    <section id="section2" class="grey lighten-5">
       <div class="container">
         <div class="row center-align">
           <div class="col m4 s12">
@@ -62,8 +95,7 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               </div>
             </div>
           </div>
@@ -75,29 +107,28 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               </div>
             </div>
           </div>
           <div class="col m4 s12">
             <div class="row">
               <div class="col s12">
-                <h3>Algo</h3>
+                <h3>¿Cómo funciona?</h3>
               </div>
             </div>
             <div class="row">
               <div class="col s12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    
   </main>
-  <footer class="page-footer blue darken-1">
+  <footer class="page-footer grey darken-3">
     <div class="footer-copyright">
       <div class="container">
         <h6 class="center white-text">© 2017 Voto Unimet by Quevedo & Rojas.</h6>
