--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="blue darken-1">
+    <nav class="grey darken-3">
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo center">Voto Unimet</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -22,36 +22,44 @@
           <li><a href="denuncias.html">Denuncias</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#" id="login">Login</a></li>
+          <li><a id="login">Login</a></li>
+          <li><a id="logout" class="hide">Logout</a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
           <li><a href="index.html">Home</a></li>
           <li><a href="votaciones.html">Votaciones</a></li>
           <li><a href="resultados.html">Resultados</a></li>
           <li><a href="denuncias.html">Denuncias</a></li>
-          <li><a href="#" id="login">Login</a></li>
+          <li><a id="login-m">Login</a></li>
+          <li class="hide"><a id="logout">Logout</a></li>
         </ul>
       </div>
     </nav>
+    <div class="container">
+      <div class="hide center" id="chip-div">
+        <img src="" alt="Contact Person" id="img-user" class="circle responsive-img">
+        <p id="user-name"></p>
+      </div>
+    </div>
   </header>
-  <main>
-     <div class="container">
-    <div class="row">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Aqui va el nombre</span>
-              <p>Utiliza nuestra plataforma para votar por las personas de tu preferencia!</p>
-            </div>
-            <div class="card-action">
-              <a href="#"></a>
-                <ul class="collapsible" data-collapsible="accordion">
-                  <li>
-                    <div class="collapsible-header"><i class="material-icons">place</i>¿Cómo votar?</div>
-                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                  </li>
-                  <li>
-                    <div class="collapsible-header"><i class="material-icons">filter_drama</i>Candidatos</div>
-                    <div class="collapsible-body"><span>
+  <main class="hide" id="votacion">
+    <div class="container">
+      <div class="row">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">Plataforma Electoral</span>
+            <p>Utiliza nuestra plataforma para votar por las personas de tu preferencia!</p>
+          </div>
+          <div class="card-action">
+            <a href="#"></a>
+            <ul class="collapsible" data-collapsible="accordion">
+              <li>
+                <div class="collapsible-header"><i class="material-icons">place</i>¿Cómo votar?</div>
+                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+              </li>
+              <li>
+                <div class="collapsible-header"><i class="material-icons">filter_drama</i>Candidatos</div>
+                <div class="collapsible-body"><span>
                       <table>
                         <thead>
                           <tr>
@@ -88,10 +96,10 @@
                         </tbody>
                       </table>
                     </span></div>
-                  </li>
-                  <li>
-                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Votar</div>
-                    <div class="collapsible-body"><span>
+              </li>
+              <li>
+                <div class="collapsible-header"><i class="material-icons">whatshot</i>Votar</div>
+                <div class="collapsible-body"><span>
                       <div class="row">
                       <form class="col s12">
                         <div class="row">
@@ -149,133 +157,13 @@
                       </form>
                     </div>
                     </span></div>
-                  </li>
-                </ul>
-            </div>
+              </li>
+            </ul>
           </div>
+        </div>
       </div>
     </div>
   </main>
-<<<<<<< HEAD
-  <div class="container">
-    <div class="row">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Aqui va el nombre</span>
-              <p>Utiliza nuestra plataforma para votar por las personas de tu preferencia!</p>
-            </div>
-            <div class="card-action">
-              <a href="#"></a>
-                <ul class="collapsible" data-collapsible="accordion">
-                  <li>
-                    <div class="collapsible-header"><i class="material-icons">place</i>¿Cómo votar?</div>
-                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                  </li>
-                  <li>
-                    <div class="collapsible-header"><i class="material-icons">filter_drama</i>Candidatos</div>
-                    <div class="collapsible-body"><span>
-                      <table>
-                        <thead>
-                          <tr>
-                              <th>Plancha</th>
-                              <th>Cargo1</th>
-                              <th>Cargo2</th>
-                              <th>Cargo3</th>
-                              <th>Cargo4</th>
-                          </tr>
-                        </thead>
-
-                        <tbody>
-                          <tr>
-                            <td>Alvin</td>
-                            <td>Eclair</td>
-                            <td>$0.87</td>
-                            <td>Eclair</td>
-                            <td>$0.87</td>
-                          </tr>
-                          <tr>
-                            <td>Alvin</td>
-                            <td>Eclair</td>
-                            <td>$0.87</td>
-                            <td>Eclair</td>
-                            <td>$0.87</td>
-                          </tr>
-                          <tr>
-                            <td>Alvin</td>
-                            <td>Eclair</td>
-                            <td>$0.87</td>
-                            <td>Eclair</td>
-                            <td>$0.87</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </span></div>
-                  </li>
-                  <li>
-                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Votar</div>
-                    <div class="collapsible-body"><span>
-                      <div class="row">
-                      <form class="col s12">
-                        <div class="row">
-                          <div class="col s4">
-                              Cargo 1
-                                <p>
-                                  <input name="group1" type="radio" id="test1" />
-                                  <label for="test1">Red</label>
-                                </p>
-                                <p>
-                                  <input name="group1" type="radio" id="test2" />
-                                  <label for="test2">Yellow</label>
-                                </p>
-                                <p>
-                                  <input class="with-gap" name="group1" type="radio" id="test3"  />
-                                  <label for="test3">Green</label>
-                                </p>
-                              </div>
-                            <div class="col s4">
-                            Cargo2
-                            <p>
-                              <input name="group2" type="radio" id="test4" />
-                              <label for="test4">Red</label>
-                            </p>
-                            <p>
-                              <input name="group2" type="radio" id="test5" />
-                              <label for="test5">Yellow</label>
-                            </p>
-                            <p>
-                              <input class="with-gap" name="group2" type="radio" id="test6"  />
-                              <label for="test6">Green</label>
-                            </p>
-                          </div>
-                          <div class="col s4">
-                            Cargo3
-                            <p>
-                              <input name="group3" type="radio" id="test7" />
-                              <label for="test7">Red</label>
-                            </p>
-                            <p>
-                              <input name="group3" type="radio" id="test8" />
-                              <label for="test8">Yellow</label>
-                            </p>
-                            <p>
-                              <input class="with-gap" name="group3" type="radio" id="test9"  />
-                              <label for="test9">Green</label>
-                            </p>
-                          </div>    
-                        </div>
-                        <div class="row">
-                          <div class="col m12 center">
-                            <button class="waves-effect waves-light btn blue darken-1" type="submit">Votar</button>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                    </span></div>
-                  </li>
-                </ul>
-            </div>
-          </div>
-      </div>
   <footer class="page-footer blue darken-1">
     <div class="footer-copyright">
       <div class="container">
@@ -290,6 +178,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
   <script src="js/firebase.js"></script>
+  <script src="js/votaciones.js"></script>
   <script src="js/main.js"></script>
 </body>
 
