--- a/public/denuncias.html
+++ b/public/denuncias.html
@@ -70,7 +70,7 @@
                   </div>
                   <div class="row">
                     <div class="col s12 center">
-                      <a class="waves-effect waves-light btn">button</a>
+                      <a class="waves-effect waves-light btn" id="enviarDenuncia">Enviar</a>
                     </div>
                   </div>
                 </div>
@@ -94,6 +94,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
   <script src="js/firebase.js"></script>
+  <script src="js/denuncias.js"></script>
   <script src="js/main.js"></script>
 </body>
 
