Modificaciones para que sea lo mas MVC Posible :boom:

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Vota Unimet</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="assets/style/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -22,6 +22,7 @@
           <li><a href="denuncias.html">Denuncias</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
+          <li><a href="documentos.html">Documentos</a></li>
           <li><a id="login">Login</a></li>
           <li><a id="logout" class="hide">Logout</a></li>
         </ul>
@@ -30,6 +31,7 @@
           <li><a href="votaciones.html">Votaciones</a></li>
           <li><a href="resultados.html">Resultados</a></li>
           <li><a href="denuncias.html">Denuncias</a></li>
+          <li><a href="documentos.html">Documentos</a></li>
           <li><a id="login-m">Login</a></li>
           <li class="hide"><a id="logout">Logout</a></li>
         </ul>
@@ -37,9 +39,9 @@
     </nav>
     <div class="container">
       <div class="chip hide" id="chip-div">
-      <img src="" alt="Contact Person" id="img-user">
-      <p id="user-name"></p>
-    </div>
+        <img src="" alt="Contact Person" id="img-user">
+        <p id="user-name"></p>
+      </div>
     </div>
   </header>
   <main>
@@ -114,8 +116,8 @@
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
-  <script src="js/firebase.js"></script>
-  <script src="js/main.js"></script>
+  <script src="assets/js/firebase.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
