--- a/public/panel.html
+++ b/public/panel.html
@@ -44,48 +44,10 @@
       </div>
     </div>
   </header>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <div class="row">
-            <div class="col m2"></div>
-            <div class="col m10 s12 card-panel">
-              <div class="row">
-                <div class="col s1"></div>
-                <div class="col s10">
-                  <div class="row">
-                    <div class="col m6 s12 input-field">
-                      <input placeholder="Pedro Perez" id="nombre" type="text" class="validate">
-                      <label for="nombre">Nombre</label>
-                    </div>
-                    <div class="col m6 s12 input-field">
-                      <input placeholder="Correo" id="email" type="text" class="validate">
-                      <label for="email">E-Mail</label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col s12 input-field">
-                      <textarea id="denuncia" class="materialize-textarea"></textarea>
-                      <label for="denuncia">Denuncia: </label>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col s12 center">
-                      <a class="waves-effect waves-light btn" id="enviarDenuncia">Enviar</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col s1"></div>
-              </div>
-            </div>
-            <div class="col m2"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-  <footer class="page-footer blue darken-1">
+	<main>
+		
+	</main>
+  <footer class="page-footer grey darken-3">
     <div class="footer-copyright">
       <div class="container">
         <h6 class="center white-text">© 2017 Voto Unimet by Quevedo & Rojas.</h6>
@@ -94,9 +56,10 @@
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
   <script src="assets/js/firebase.js"></script>
-  <script src="assets/js/denuncias/denuncias.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
