--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -177,9 +177,9 @@
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
-  <script src="js/firebase.js"></script>
-  <script src="js/votaciones.js"></script>
-  <script src="js/main.js"></script>
+  <script src="assets/js/firebase.js"></script>
+  <script src="assets/js/votaciones/votaciones.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
