Acomode Algunas vergitas :alien:

--- a/public/404.html
+++ b/public/404.html
@@ -8,6 +8,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="assets/style/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  <style type="text/css" media="screen">
+  #font404 {
+    font-family: 'Righteous', cursive;
+    font-size: 5rem;
+  }
+  #card-404 {
+    margin-top:100px;
+  }
+  .card {
+    padding: 1rem !important;
+  }
+  </style>
 </head>
 
 <body>
@@ -45,7 +58,26 @@
     </div>
   </header>
   <main>
-    
+    <div class="container" id="card-404">
+      <div class="row">
+        <div class="col m6 offset-m3 s12">
+          <div class="row">
+            <div class="col s12">
+              <div class="card grey lighten-5">
+                <div class="card-content black-text center">
+                  <span class="card-title" id="font404">404</span>
+                  <br><br>
+                  <p>Error la página solicitada no exciste</p>
+                </div>
+                <div class="card-action center">
+                  <a href="index.html">Volver al Inicio</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="page-footer grey darken-3">
     <div class="footer-copyright">
