--- a/public/panel.html
+++ b/public/panel.html
@@ -45,7 +45,35 @@
     </div>
   </header>
 	<main>
-		
+		<section class="banner">
+			<h3 class="welcomer-user"></h3>
+		</section>
+		<section class="container">
+			<div class="row">
+				<div class="col s12 8 offset-m2 l6 offset-l3">
+	        <div class="card-panel grey lighten-5 z-depth-1">
+	          <div class="row valign-wrapper">
+	            <div class="col s2">
+	              <img src="" alt="" class="responsive-img circle" id="userImg">
+	            </div>
+	            <div class="col s10">
+	              <span class="black-text">
+	              	Mensaje random
+	              	Voto: Si
+	              </span>
+	            </div>
+	          </div>
+	        </div>
+      	</div>
+			</div>
+		</section>
+		<section class="container">
+			<div class="row">
+				<div class="col m12">
+					<p>Que puede hacer el marico este</p>
+				</div>
+			</div>			
+		</section>
 	</main>
   <footer class="page-footer grey darken-3">
     <div class="footer-copyright">
