--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -54,11 +54,11 @@
             <a href="#"></a>
             <ul class="collapsible" data-collapsible="accordion">
               <li>
-                <div class="collapsible-header"><i class="material-icons">place</i>¿Cómo votar?</div>
+                <div class="collapsible-header"><i class="material-icons">info</i>¿Cómo votar?</div>
                 <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
               </li>
               <li>
-                <div class="collapsible-header"><i class="material-icons">filter_drama</i>Candidatos</div>
+                <div class="collapsible-header"><i class="material-icons">people</i>Candidatos</div>
                 <div class="collapsible-body"><span>
                       <table>
                         <thead>
@@ -98,7 +98,7 @@
                     </span></div>
               </li>
               <li>
-                <div class="collapsible-header"><i class="material-icons">whatshot</i>Votar</div>
+                <div class="collapsible-header"><i class="material-icons">games</i>Votar</div>
                 <div class="collapsible-body"><span>
                       <div class="row">
                       <form class="col s12">
