--- a/public/denuncias.html
+++ b/public/denuncias.html
@@ -65,9 +65,13 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col s12 input-field">
+                    <div class="col s11 input-field">
                       <textarea id="denuncia" class="materialize-textarea"></textarea>
                       <label for="denuncia">Denuncia: </label>
+                    </div>
+                    <div class="col s1 input-field">
+                      <a class="btn-floating btn-large waves-effect grey darken-3"><i class="material-icons">attach_file</i></a>
+                    </div>
                     </div>
                   </div>
                   <div class="row">
