--- a/public/panel.html
+++ b/public/panel.html
@@ -22,7 +22,6 @@
           <li><a href="denuncias.html">Denuncias</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-          <li><a href="documentos.html">Documentos</a></li>
           <li><a id="login">Login</a></li>
           <li><a id="logout" class="hide">Logout</a></li>
         </ul>
@@ -31,48 +30,48 @@
           <li><a href="votaciones.html">Votaciones</a></li>
           <li><a href="resultados.html">Resultados</a></li>
           <li><a href="denuncias.html">Denuncias</a></li>
-          <li><a href="documentos.html">Documentos</a></li>
           <li><a id="login-m">Login</a></li>
           <li class="hide"><a id="logout">Logout</a></li>
         </ul>
       </div>
     </nav>
     <div class="container">
-      <div class="chip hide" id="chip-div">
-        <img src="" alt="Contact Person" id="img-user">
+      <div class="hide center" id="chip-div">
+        <img src="" alt="Contact Person" id="img-user" class="circle responsive-img">
         <p id="user-name"></p>
       </div>
     </div>
   </header>
 	<main>
-		<section class="banner">
-			<h3 class="welcomer-user"></h3>
-		</section>
+		
+		
+    <section class="container">
+      <div class="col s5">
+        <div class="card-panel grey lighten-5 z-depth-2">
+          <div class="row">
+            <div class="col s2">
+              <span class="black-text">
+                <i class="material-icons md-grey icon-text" style="font-size: 100px">check_circle</i>
+              </span>
+            </div>
+            <div>
+                  <h2 font face="Quasiparticles"><center>¡¡YA VOTASTE!!</center></h2>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col m6 center">
+                <a class="waves-effect grey darken-3 btn">Resultados</a>
+              </div>
+              <div class="col m6 center">
+                <a class="waves-effect grey darken-3 btn">Home</a>
+              </div>
+            </div>
+
+        </div>
+      </div>
+    </section>
 		<section class="container">
-			<div class="row">
-				<div class="col s12 8 offset-m2 l6 offset-l3">
-	        <div class="card-panel grey lighten-5 z-depth-1">
-	          <div class="row valign-wrapper">
-	            <div class="col s2">
-	              <img src="" alt="" class="responsive-img circle" id="userImg">
-	            </div>
-	            <div class="col s10">
-	              <span class="black-text">
-	              	Mensaje random
-	              	Voto: Si
-	              </span>
-	            </div>
-	          </div>
-	        </div>
-      	</div>
-			</div>
-		</section>
-		<section class="container">
-			<div class="row">
-				<div class="col m12">
-					<p>Que puede hacer el marico este</p>
-				</div>
-			</div>			
+						
 		</section>
 	</main>
   <footer class="page-footer grey darken-3">
@@ -89,6 +88,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
   <script src="assets/js/firebase.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/panel/panel.js"></script>
 </body>
 
 </html>
