Error idiota de ortografia

--- a/public/404.html
+++ b/public/404.html
@@ -67,7 +67,7 @@
                 <div class="card-content black-text center">
                   <span class="card-title" id="font404">404</span>
                   <br><br>
-                  <p>Error la página solicitada no exciste</p>
+                  <p>Error la página solicitada no existe</p>
                 </div>
                 <div class="card-action center">
                   <a href="index.html">Volver al Inicio</a>
