--- a/public/denuncias.html
+++ b/public/denuncias.html
@@ -65,28 +65,35 @@
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col s11 input-field">
+                    <div class="col s12 input-field">
                       <textarea id="denuncia" class="materialize-textarea"></textarea>
                       <label for="denuncia">Denuncia: </label>
                     </div>
-                    <div class="col s1 input-field">
-                      <a class="btn-floating btn-large waves-effect grey darken-3"><i class="material-icons">attach_file</i></a>
-                    </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col s12 center">
-                      <a class="waves-effect waves-light btn" id="enviarDenuncia">Enviar</a>
+                    <div class="col s12 input-field">
+                      <div class="btn">
+                        <span>Foto</span>
+                        <input type="file" id="fileUpload">
+                      </div>
+                      <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="col s1"></div>
+              </div>
+              <div class="row">
+                <div class="col s12 center">
+                  <a class="waves-effect waves-light btn" id="enviarDenuncia">Enviar</a>
+                </div>
               </div>
             </div>
-            <div class="col m2"></div>
+            <div class="col s1"></div>
           </div>
         </div>
+        <div class="col m2"></div>
       </div>
+    </div>
+    </div>
     </div>
   </main>
   <footer class="page-footer blue darken-1">
@@ -98,7 +105,10 @@
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-storage.js"></script>
   <script src="assets/js/firebase.js"></script>
   <script src="assets/js/denuncias/denuncias.js"></script>
   <script src="assets/js/main.js"></script>
