--- a/public/panel.html
+++ b/public/panel.html
@@ -46,27 +46,22 @@
 		
 		
     <section class="container">
-      <div class="col s5">
-        <div class="card-panel grey lighten-5 z-depth-2">
-          <div class="row">
-            <div class="col s2">
-              <span class="black-text">
-                <i class="material-icons md-grey icon-text" style="font-size: 100px">check_circle</i>
-              </span>
-            </div>
-            <div>
-                  <h2 font face="Quasiparticles"><center>¡¡YA VOTASTE!!</center></h2>
-            </div>
-          </div>
+      <div class="row">
+        <div class="col s12 m12">
+          <div class="card-panel grey lighten-5 z-depth-2">
             <div class="row">
-              <div class="col m6 center">
+                <span class="center">
+                  <i class="material-icons md-grey icon-text" style="font-size: 100px">check_circle</i>
+                  <h2>Voto procesado con éxito</h2>
+                </span>
+            </div>
+            <div class="row">
+              <div class="col m6 s12 offset-m3 center">
                 <a class="waves-effect grey darken-3 btn">Resultados</a>
-              </div>
-              <div class="col m6 center">
                 <a class="waves-effect grey darken-3 btn">Home</a>
               </div>
             </div>
-
+          </div>
         </div>
       </div>
     </section>
