--- a/public/agregar-candidato.html
+++ b/public/agregar-candidato.html
@@ -67,7 +67,7 @@
               <input placeholder="Placeholder" id="cargo" type="text" class="validate">
               <label for="cargo">Cargo</label>
             </div>
-            <div class="col s12 input-field col">
+            <div class="col s12 input-field">
               <div class="file-field input-field">
                 <div class="btn">
                   <span>Foto</span>
