--- a/public/denuncias.html
+++ b/public/denuncias.html
@@ -70,12 +70,14 @@
                       <label for="denuncia">Denuncia: </label>
                     </div>
                     <div class="col s12 input-field">
-                      <div class="btn">
-                        <span>Foto</span>
-                        <input type="file" id="fileUpload">
-                      </div>
-                      <div class="file-path-wrapper">
-                        <input class="file-path validate" type="text">
+                      <div class="file-field input-field">
+                        <div class="btn">
+                          <span>Anexo</span>
+                          <input type="file" id="fileUpload">
+                        </div>
+                        <div class="file-path-wrapper">
+                          <input class="file-path validate" type="text">
+                        </div>
                       </div>
                     </div>
                   </div>
