Lo que llevo que funciona porque ajá

--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -55,7 +55,9 @@
             <ul class="collapsible" data-collapsible="accordion">
               <li>
                 <div class="collapsible-header"><i class="material-icons">info</i>¿Cómo votar?</div>
-                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                <div class="collapsible-body"><span>Debes ir a la siguiente sección de este desplegable, ahí encontrará los candidatos por lo que puede votar.
+                <p>Luego de escoger el candidato de preferencia, proceda a seleccionarlos en la tercera sección de esta página, donde observará por cargo las postulaciones de cada candidato, seleccione el cicurlo que corresponda al candidato de su preferencia.</p>
+                <p> Por último, de clic en el botón "votar".</p></span></div>
               </li>
               <li>
                 <div class="collapsible-header"><i class="material-icons">people</i>Candidatos</div>
@@ -63,11 +65,9 @@
                       <table id="table" class="centered responsive-table">
                         <thead>
                           <tr>
+                              <th>Cargo</th>
                               <th>Plancha</th>
-                              <th>Cargo1</th>
-                              <th>Cargo2</th>
-                              <th>Cargo3</th>
-                              <th>Cargo4</th>
+                              <th>Candidato</th>
                           </tr>
                         </thead>
                         <tbody id="candidatos-table">
@@ -80,37 +80,15 @@
                 <div class="collapsible-header"><i class="material-icons">games</i>Votar</div>
                 <div class="collapsible-body"><span>
                       <div class="row">
-                      <form class="col s12">
+                      <form class="col s12" name = "formVotar">
                         <div class="row">
                           <div class="col s4">
-                              Cargo 1
-                                <p>
-                                  <input name="group1" type="radio" id="test1" />
-                                  <label for="test1">Red</label>
-                                </p>
-                                <p>
-                                  <input name="group1" type="radio" id="test2" />
-                                  <label for="test2">Yellow</label>
-                                </p>
-                                <p>
-                                  <input class="with-gap" name="group1" type="radio" id="test3"  />
-                                  <label for="test3">Green</label>
-                                </p>
-                              </div>
-                            <div class="col s4">
-                            Cargo2
-                            <p>
-                              <input name="group2" type="radio" id="test4" />
-                              <label for="test4">Red</label>
-                            </p>
-                            <p>
-                              <input name="group2" type="radio" id="test5" />
-                              <label for="test5">Yellow</label>
-                            </p>
-                            <p>
-                              <input class="with-gap" name="group2" type="radio" id="test6"  />
-                              <label for="test6">Green</label>
-                            </p>
+                            Consejero Estudiantil
+                            <div id="cont1"></div>
+                          </div>
+                          <div class="col s4">
+                              Presidencia Estudiantil
+                              <div id="cont2"></div>
                           </div>
                           <div class="col s4">
                             Cargo3
@@ -130,7 +108,7 @@
                         </div>
                         <div class="row">
                           <div class="col m12 center">
-                            <button class="waves-effect waves-light btn blue darken-1" type="submit">Votar</button>
+                            <button class="waves-effect waves-light btn blue darken-1" type="submit" id = "votarBtn">Votar</button>
                           </div>
                         </div>
                       </form>
