--- a/public/panel.html
+++ b/public/panel.html
@@ -57,8 +57,8 @@
             </div>
             <div class="row">
               <div class="col m6 s12 offset-m3 center">
-                <a class="waves-effect grey darken-3 btn">Resultados</a>
-                <a class="waves-effect grey darken-3 btn">Home</a>
+                <a class="waves-effect grey darken-3 btn" href = "resultados.html">Resultados</a>
+                <a class="waves-effect grey darken-3 btn" href = "index.html">Home</a>
               </div>
             </div>
           </div>
