--- a/public/panel.html
+++ b/public/panel.html
@@ -42,33 +42,30 @@
       </div>
     </div>
   </header>
-	<main>
-		
-		
+  <main>
     <section class="container">
       <div class="row">
         <div class="col s12 m12">
           <div class="card-panel grey lighten-5 z-depth-2">
             <div class="row">
-                <span class="center">
-                  <i class="material-icons md-grey icon-text" style="font-size: 100px">check_circle</i>
-                  <h2>Voto procesado con éxito</h2>
-                </span>
+              <span class="center">
+                <h2><i class="material-icons md-grey icon-text large">check_circle</i><span id="votoMensaje">Voto procesado con éxito</span></h2>
+              </span>
             </div>
             <div class="row">
               <div class="col m6 s12 offset-m3 center">
-                <a class="waves-effect grey darken-3 btn" href = "resultados.html">Resultados</a>
-                <a class="waves-effect grey darken-3 btn" href = "index.html">Home</a>
+                <a class="waves-effect grey darken-3 btn" href="resultados.html">Resultados</a>
+                <a class="waves-effect grey darken-3 btn" href="votaciones.html" class="hide" id="votar">Votar</a>
+                <a class="waves-effect grey darken-3 btn" href="index.html">Home</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-		<section class="container">
-						
-		</section>
-	</main>
+    <section class="container">
+    </section>
+  </main>
   <footer class="page-footer grey darken-3">
     <div class="footer-copyright">
       <div class="container">
