--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -38,7 +38,8 @@
     <div class="container">
       <div class="hide center" id="chip-div">
         <img src="" alt="Contact Person" id="img-user" class="circle responsive-img">
-        <p><h3 id="user-name"></h3></p>
+        <p>
+          <h3 id="user-name"></h3></p>
       </div>
     </div>
   </header>
@@ -52,7 +53,7 @@
           </div>
           <div class="card-action">
             <a href="#"></a>
-            <ul class="collapsible" data-collapsible="accordion" >
+            <ul class="collapsible" data-collapsible="accordion">
               <li>
                 <div class="collapsible-header"><i class="material-icons">info</i>¿Cómo votar?</div>
                 <div class="collapsible-body white-text"><span>Debes ir a la siguiente sección de este desplegable, ahí encontrará los candidatos por lo que puede votar.
@@ -69,6 +70,7 @@
                               <th>Plancha</th>
                               <th>Candidato</th>
                               <th>Carrera</th>
+                              <th>Foto</th>
                           </tr>
                         </thead>
                         <tbody id="candidatos-table">
@@ -123,6 +125,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-storage.js"></script>
   <script src="assets/js/firebase.js"></script>
   <script src="assets/js/votaciones/votaciones.js"></script>
   <script src="assets/js/main.js"></script>
