--- a/public/agregar-candidato.html
+++ b/public/agregar-candidato.html
@@ -37,12 +37,16 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <div class="chip hide" id="chip-div">
-        <img src="" alt="Contact Person" id="img-user">
-        <p id="user-name"></p>
+    <section class="grey lighten-5">
+      <div class="container">
+        <div class="user-view hide">
+          <div class="row valign-wrapper">
+            <div class="col s1"><img class="responsive-img circle" id="user-photo"></div>
+            <div class="col s11"><span id="user-name"></span></div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
   </header>
   <main>
     <section class="banner">
