--- a/public/index.html
+++ b/public/index.html
@@ -37,19 +37,23 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <div class="chip hide" id="chip-div">
-        <img src="" alt="Contact Person" id="img-user">
-        <p id="user-name"></p>
+    <section class="grey lighten-5">
+      <div class="container">
+        <div class="user-view hide">
+          <div class="row valign-wrapper">
+            <div class="col s1"><img class="responsive-img circle" id="user-photo"></div>
+            <div class="col s11"><span id="user-name"></span></div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
   </header>
   <main>
-    <section id="banner-bienvenida" class="grey lighten-5">
+    <section id="banner-bienvenida" class="center grey lighten-3">
       <div class="banner">
         <div class="container">
           <div class="row">
-            <div class="col s12">
+            <div class="col s12 ">
               <h2>Voto Unimet</h2>
             </div>
           </div>
