--- a/public/votaciones.html
+++ b/public/votaciones.html
@@ -22,6 +22,7 @@
           <li><a href="denuncias.html">Denuncias</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
+          <li><a href="documentos.html">Documentos</a></li>
           <li><a id="login">Login</a></li>
           <li><a id="logout" class="hide">Logout</a></li>
         </ul>
@@ -30,23 +31,27 @@
           <li><a href="votaciones.html">Votaciones</a></li>
           <li><a href="resultados.html">Resultados</a></li>
           <li><a href="denuncias.html">Denuncias</a></li>
+          <li><a href="documentos.html">Documentos</a></li>
           <li><a id="login-m">Login</a></li>
           <li class="hide"><a id="logout">Logout</a></li>
         </ul>
       </div>
     </nav>
-    <div class="container">
-      <div class="hide center" id="chip-div">
-        <img src="" alt="Contact Person" id="img-user" class="circle responsive-img">
-        <p>
-          <h3 id="user-name"></h3></p>
+    <section class="grey lighten-5">
+      <div class="container">
+        <div class="user-view hide">
+          <div class="row valign-wrapper">
+            <div class="col s1"><img class="responsive-img circle" id="user-photo"></div>
+            <div class="col s11"><span id="user-name"></span></div>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
   </header>
   <main class="hide" id="votacion">
     <div class="container">
       <div class="row">
-        <div class="card grey darken-3">
+        <div class="card grey darken-1">
           <div class="card-content white-text">
             <span class="card-title">Plataforma Electoral</span>
             <p>Utiliza nuestra plataforma para votar por las personas de tu preferencia!</p>
@@ -113,7 +118,7 @@
       </div>
     </div>
   </main>
-  <footer class="page-footer blue darken-1">
+  <footer class="page-footer grey darken-3">
     <div class="footer-copyright">
       <div class="container">
         <h6 class="center white-text">© 2017 Voto Unimet by Quevedo & Rojas.</h6>
